--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -30,6 +30,25 @@
     /* position: absolute;
     top: 393px; */
 }
+.countdown{
+    width: 100%;
+    position: sticky;
+    top: 59px;
+    z-index: 100;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #ccc;
+    opacity: .6;
+}
+.countdown>h3{
+    opacity: 1;
+    color: black;
+    z-index: 1;
+    font-weight: 900;
+}
 @media (max-width:500px){
     .home__image{
         margin-top: -60px;
@@ -37,5 +56,9 @@
     .home__row{
         flex-direction: column;
         flex-wrap: wrap;
+    }
+    .countdown{
+        top: 119px;
+        flex-direction: column;
     }
 }
