--- a/client/src/components/TopBar/TopBar.css
+++ b/client/src/components/TopBar/TopBar.css
@@ -81,10 +81,17 @@
     padding-left: 5px;
     background-color: #131921;
 }
+.section3__contents{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 .sidebar__option{
     color: #f0c14b;
     font-weight: 600;
     cursor: pointer;
+    width: 100%;
+ 
 }
 .sidebar__option:hover{
     background-color:white ;
