--- a/client/src/components/Checkout/Subtotal/Payment/Payment.css
+++ b/client/src/components/Checkout/Subtotal/Payment/Payment.css
@@ -17,7 +17,7 @@
 .payment__title{
     flex: .2;
 }
-.payment__address,.payment__items{
+.payment__address,.payment__items,.payment__details{
     flex: .8;
 }
 @media (max-width:500px){
